...
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>

    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>

    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>

    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>
...
    <string formatted="false" name="loading_google_exchange_code">Exchanging Google login data…</string>
    <string formatted="false" name="loading_google_login">Google login on our server is complete…</string>

    <string formatted="false" name="logout_successful">Logout successful</string>

    <string formatted="false" name="degrees">degrees</string>
    <string formatted="false" name="background">Background</string>
    <string formatted="false" name="landscape">landscape</string>
    <string formatted="false" name="portrait">portrait</string>
    <string formatted="false" name="unknown">unknown</string>
    <string formatted="false" name="disconnect">Disconnect</string>
    <!--  -->

...
    <string formatted="false" name="am_unpack">Unpack</string>
    <string formatted="false" name="am_copy">Copy</string>
    <string formatted="false" name="am_delete">Delete</string>
    <string formatted="false" name="am_rename">Rename</string>
    <string formatted="false" name="am_convert">Convert</string>
    <string formatted="false" name="am_merge">Merge</string>
    <string formatted="false" name="dialog_confirm_delete">You can\'t undo this!</string>

    <string formatted="false" name="list_headline_sprites">Actors and objects</string>

    <!-- Options Menu Options -->
    <string formatted="false" name="backpack">Backpack</string>
    <string formatted="false" name="copy">Copy</string>
    <string formatted="false" name="delete">Delete</string>
    <string formatted="false" name="rename">Rename</string>
    <string formatted="false" name="merge">Merge</string>
    <string formatted="false" name="show_details">Show details</string>
    <string formatted="false" name="hide_details">Hide details</string>
    <string formatted="false" name="project_options">Project options</string>
    <string formatted="false" name="from_local">Add from local</string>
    <string formatted="false" name="sort_projects">Sort</string>
    <string formatted="false" name="unsort_projects">Unsort</string>
    <string formatted="false" name= "import_from_project">Select project to import from</string>

    <!-- New Dialog Titles -->
...
    <string formatted="false" name="sound_details">Duration: %s, size: %s</string>
    <!--  -->

    <!-- Rename Dialog Titles -->
    <string formatted="false" name="rename_project">Rename project</string>
    <string formatted="false" name="rename_scene_dialog">Rename scene</string>
    <string formatted="false" name="rename_sprite_dialog">Rename actor or object</string>
    <string formatted="false" name="rename_look_dialog">Rename look</string>
    <string formatted="false" name="rename_sound_dialog">Rename sound</string>
    <string formatted="false" name="rename_nfctag_dialog">Rename NFC tag</string>
    <string formatted="false" name="rename_data_dialog">Rename</string>

    <!-- New Script Group Dialog -->
    <string formatted="false" name="new_group">New group</string>
    <string formatted="false" name="default_group_name">Group</string>

    <!-- New Scene Menu -->
    <string formatted="false" name="new_scene">New scene</string>

    <!-- Action Toasts -->
    <!-- Backpack -->
    <string formatted="false" name="backpack_empty">Backpack empty. Nothing to unpack.</string>
    <plurals name="packed_scenes">
        <item quantity="one">Backpacked %d scene.</item>
...
    <string formatted="false" name="guiro">guiro</string>
    <string formatted="false" name="vibraslap">vibraslap</string>
    <string formatted="false" name="open_cuica">open cuica</string>
    <!--  -->

    <!-- Default Values -->
    <string formatted="false" name="default_project_name">My project</string>
    <string formatted="false" name="default_variable_name">Variable</string>
    <string formatted="false" name="default_scene_name">Scene</string>
    <string formatted="false" name="default_script_group_name">Script group</string>
    <string formatted="false" name="default_broadcast_message_name">Message</string>
    <string formatted="false" name="default_list_name">List</string>
    <string formatted="false" name="default_project_background_name">Background</string>
...
