/*
 * Catroid: An on-device visual programming system for Android devices
 * Copyright (C) 2010-2025 The Catrobat Team
 * (<http://developer.catrobat.org/credits>)
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as
 * published by the Free Software Foundation, either version 3 of the
 * License, or (at your option) any later version.
 *
 * An additional term exception under section 7 of the GNU Affero
 * General Public License, version 3, is available at
 * http://developer.catrobat.org/license_additional_term
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
package com.myradev.lunarcode.uiespresso.ui.fragment

import android.content.Context
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import androidx.test.core.app.ApplicationProvider.getApplicationContext
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.Espresso.openActionBarOverflowOrOptionsMenu
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.ext.junit.runners.AndroidJUnit4
import com.myradev.lunarcode.ProjectManager
import com.myradev.lunarcode.R
import com.myradev.lunarcode.common.BrickValues
import com.myradev.lunarcode.common.Constants
import com.myradev.lunarcode.common.LookData
import com.myradev.lunarcode.common.SoundInfo
import com.myradev.lunarcode.content.Project
import com.myradev.lunarcode.content.Scene
import com.myradev.lunarcode.content.Script
import com.myradev.lunarcode.content.Sprite
import com.myradev.lunarcode.content.StartScript
import com.myradev.lunarcode.content.bricks.SetXBrick
import com.myradev.lunarcode.formulaeditor.Formula
import com.myradev.lunarcode.io.ResourceImporter
import com.myradev.lunarcode.io.XstreamSerializer
import com.myradev.lunarcode.io.asynctask.saveProjectSerial
import com.myradev.lunarcode.testsuites.annotations.Cat.AppUi
import com.myradev.lunarcode.testsuites.annotations.Level.Smoke
import com.myradev.lunarcode.ui.ProjectListActivity
import com.myradev.lunarcode.uiespresso.ui.fragment.rvutils.RecyclerViewInteractionWrapper
import com.myradev.lunarcode.uiespresso.util.rules.BaseActivityTestRule
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.experimental.categories.Category
import org.junit.runner.RunWith
import org.koin.java.KoinJavaComponent.inject
import java.io.File
import java.io.IOException

@RunWith(AndroidJUnit4::class)
class ProjectCopierTest {
    @get:Rule
    var baseActivityTestRule =
        BaseActivityTestRule(
            ProjectListActivity::class.java, true, false
        )
    private val toBeCopiedProjectName = "testProject"
    private val projectManager: ProjectManager = inject(ProjectManager::class.java).value

    @Before
    @Throws(Exception::class)
    fun setUp() {
        createProject(toBeCopiedProjectName)
        baseActivityTestRule.launchActivity(null)
    }

    @Category(AppUi::class, Smoke::class)
    @Test
    fun copyProjectTest() {
        openActionBarOverflowOrOptionsMenu(getInstrumentation().targetContext)
        onView(ViewMatchers.withText(R.string.copy))
            .perform(ViewActions.click())
        RecyclerViewInteractionWrapper.onRecyclerView().atPosition(0)
            .performCheckItemClick()
        onView(ViewMatchers.withId(R.id.confirm))
            .perform(ViewActions.click())
        onView(ViewMatchers.withText(toBeCopiedProjectName))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(ViewMatchers.withText("$toBeCopiedProjectName (1)"))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Category(AppUi::class, Smoke::class)
    @Test
    fun copyCopiedProjectsTest() {
        openActionBarOverflowOrOptionsMenu(getInstrumentation().targetContext)
        onView(ViewMatchers.withText(R.string.copy))
            .perform(ViewActions.click())
        RecyclerViewInteractionWrapper.onRecyclerView().atPosition(0)
            .performCheckItemClick()
        onView(ViewMatchers.withId(R.id.confirm))
            .perform(ViewActions.click())
        openActionBarOverflowOrOptionsMenu(getInstrumentation().targetContext)
        onView(ViewMatchers.withText(R.string.copy))
            .perform(ViewActions.click())
        RecyclerViewInteractionWrapper.onRecyclerView().atPosition(0)
            .performCheckItemClick()
        RecyclerViewInteractionWrapper.onRecyclerView().atPosition(1)
            .performCheckItemClick()
        onView(ViewMatchers.withId(R.id.confirm))
            .perform(ViewActions.click())
        onView(ViewMatchers.withText(toBeCopiedProjectName))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(ViewMatchers.withText("$toBeCopiedProjectName (1)"))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(ViewMatchers.withText("$toBeCopiedProjectName (2)"))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        onView(ViewMatchers.withText("$toBeCopiedProjectName (3)"))
            .check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Throws(IOException::class)
    private fun createProject(projectName: String) {
        val project = Project(getApplicationContext(), projectName)
        val sprite = Sprite("firstSprite")
        val script: Script = StartScript()
        script.addBrick(SetXBrick(Formula(BrickValues.X_POSITION)))
        sprite.addScript(script)
        project.defaultScene.addSprite(sprite)
        projectManager.currentProject = project
        projectManager.currentSprite = sprite
        XstreamSerializer.getInstance().saveProject(project)
        val soundFile = ResourceImporter.createSoundFileFromResourcesInDirectory(
            getInstrumentation().context.resources,
            com.myradev.lunarcode.test.R.raw.longsound,
            File(project.defaultScene.directory, Constants.SOUND_DIRECTORY_NAME),
            "longsound.mp3"
        )
        val soundInfoList = sprite.soundList
        val soundInfo = SoundInfo()
        soundInfo.file = soundFile
        soundInfo.name = "testSound1"
        soundInfoList.add(soundInfo)
        val imageFile = ResourceImporter.createImageFileFromResourcesInDirectory(
            getInstrumentation().context.resources,
            com.myradev.lunarcode.test.R.drawable.catroid_banzai,
            File(project.defaultScene.directory, Constants.IMAGE_DIRECTORY_NAME),
            "catroid_sunglasses.png",
            1.0
        )
        val lookDataList = sprite.lookList
        val lookData = LookData()
        lookData.file = imageFile
        lookData.name = "testLook1"
        lookDataList.add(lookData)
        val secondScene = Scene("secondScene", project)
        val backgroundSprite =
            Sprite(getApplicationContext<Context>().getString(R.string.background))
        backgroundSprite.look.zIndex = Constants.Z_INDEX_BACKGROUND
        secondScene.addSprite(backgroundSprite)
        project.addScene(secondScene)
        saveProjectSerial(project, getApplicationContext())
    }
}
